--- a/gnub4/pom.xml
+++ b/gnub4/pom.xml
@@ -226,6 +226,11 @@
 			<artifactId>postgresql</artifactId>
 			<version>9.1-901.jdbc4</version>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.30</version>
+		</dependency>
 
 	</dependencies>
     <build>
