--- a/gnub4/src/main/webapp/WEB-INF/web.xml
+++ b/gnub4/src/main/webapp/WEB-INF/web.xml
@@ -48,4 +48,11 @@
 		<error-code>404</error-code>
 		<location>/error/404.do</location>
 	</error-page>
+
+	<resource-ref>
+		<description>DB Connection</description>
+		<res-ref-name>jdbc/gnub4DB</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
 </web-app>
